<resources>
    <string name="app_name">Quiz</string>

    <string name="question"> </string>
    <string name="option_1">Option 1</string>
    <string name="option_2">Option 2</string>
    <string name="option_3">Option 3</string>
    <string name="option_4">Option 4</string>

    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="result">Result</string>

    <string name="username">Username</string>
    <string name="email_id">Email ID</string>

    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>

    <string name="score">Your Score:\t</string>

    <string name="background">Background Image</string>
    <string name="attempt">Attempted</string>
    <string name="not_attempted">Not Attempted</string>


    <!--<string-array name="questions">-->
    <!--<item name="question1">Which one was the first search Engine on internet </item>-->
    <!--<item name="question2">No of bits used in IPv6 </item>-->
    <!--<item name="question3">Which is the first computer virus </item>-->
    <!--<item name="question4">Which programming language is exclusively used for AI </item>-->
    <!--<item name="question5">A dual layer Blue-Ray Disk can store data up-to </item>-->
    <!--</string-array>-->


</resources>
