<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.9"
        android:contentDescription="@string/background"
        android:scaleType="centerCrop"
        android:scrollX="12dp"
        android:src="@drawable/backdrop1" />

    <RelativeLayout
        android:id="@+id/queBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin">

        <TextView
            android:id="@+id/questionNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:fontFamily="@font/josefinsans_semibold"
            android:gravity="center"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/attempt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_gravity="center"
            android:layout_margin="@dimen/margin"
            android:fontFamily="@font/josefinsans_semibold" />

        <TextView
            android:id="@+id/question"
            android:layout_width="match_parent"
            android:layout_height="@dimen/question_height"
            android:layout_below="@id/questionNo"
            android:background="@color/question_back"
            android:fontFamily="@font/josefinsans_bold"
            android:gravity="center"
            android:text="@string/question"
            android:textColor="@android:color/black"
            android:textSize="@dimen/question_text" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/optBox1n2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/queBox"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/optBox1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:layout_weight="1">

            <TextView
                android:id="@+id/optNO1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                android:fontFamily="@font/josefinsans_semibold"
                android:text="@string/option_1"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/opt1"
                android:layout_width="match_parent"
                android:layout_height="@dimen/option_height"
                android:layout_below="@id/optNO1"
                android:background="@drawable/background"
                android:fontFamily="@font/josefinsans_bold"
                android:gravity="center"
                android:onClick="validate"
                android:textColor="@android:color/black" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/optBox2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:layout_weight="1">

            <TextView
                android:id="@+id/optNO2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                android:fontFamily="@font/josefinsans_semibold"
                android:text="@string/option_2"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/opt2"
                android:layout_width="match_parent"
                android:layout_height="@dimen/option_height"
                android:layout_below="@id/optNO2"
                android:background="@drawable/background"
                android:fontFamily="@font/josefinsans_bold"
                android:gravity="center"
                android:onClick="validate"
                android:textColor="@android:color/black" />

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/optBox3n4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/optBox1n2"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/optBox3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:layout_weight="1">

            <TextView
                android:id="@+id/optNO3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                android:fontFamily="@font/josefinsans_semibold"
                android:text="@string/option_3"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/opt3"
                android:layout_width="match_parent"
                android:layout_height="@dimen/option_height"
                android:layout_below="@id/optNO3"
                android:background="@drawable/background"
                android:fontFamily="@font/josefinsans_bold"
                android:gravity="center"
                android:onClick="validate"
                android:textColor="@android:color/black" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/optBox4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:layout_weight="1">

            <TextView
                android:id="@+id/optNO4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                android:fontFamily="@font/josefinsans_semibold"
                android:text="@string/option_4"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/opt4"
                android:layout_width="match_parent"
                android:layout_height="@dimen/option_height"
                android:layout_below="@id/optNO4"
                android:background="@drawable/background"
                android:fontFamily="@font/josefinsans_bold"
                android:gravity="center"
                android:onClick="validate"
                android:textColor="@android:color/black" />

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/margin"
        android:orientation="horizontal">

        <Button
            android:id="@+id/previous"
            style="?borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="@dimen/option_height"
            android:layout_margin="@dimen/margin"
            android:layout_weight="1"
            android:fontFamily="@font/josefinsans_bold"
            android:gravity="center"
            android:onClick="previous"
            android:text="@string/previous"
            android:textColor="@android:color/white"
            android:textSize="@dimen/button_text_size" />

        <Button
            android:id="@+id/next"
            style="?borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="@dimen/option_height"
            android:layout_margin="@dimen/margin"
            android:layout_weight="1"
            android:fontFamily="@font/josefinsans_bold"
            android:gravity="center"
            android:onClick="next"
            android:text="@string/next"
            android:textColor="@android:color/white"
            android:textSize="@dimen/button_text_size" />

    </LinearLayout>

</RelativeLayout>
