<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back">

    <TextView
        android:id="@+id/input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/gap"
        android:fontFamily="sans-serif"
        android:text="@string/sign_in"
        android:textColor="@android:color/black"
        android:textSize="36sp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/name"
        android:layout_width="@dimen/input_width"
        android:layout_height="wrap_content"
        android:layout_below="@id/input"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/input_margin"
        android:hint="@string/name"
        android:textColor="@android:color/black"
        android:textSize="20sp" />


    <EditText
        android:id="@+id/id"
        android:layout_width="@dimen/input_width"
        android:layout_height="wrap_content"
        android:layout_below="@id/name"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/input_margin"
        android:hint="@string/email_id"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/id"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/gap"
        android:orientation="horizontal">

        <Button
            android:id="@+id/sign_up"
            style="?borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/input_margin"
            android:layout_weight="1"
            android:background="@drawable/background"
            android:onClick="signUp"
            android:text="@string/sign_up"
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/sign_in"
            style="?borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/input_margin"
            android:layout_weight="1"
            android:background="@drawable/background"
            android:onClick="signIN"
            android:text="@string/sign_in"
            android:textColor="@android:color/black" />

    </LinearLayout>


</RelativeLayout>
